# ugly_getopt

./: .codespellrc  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Config.cmake.in  HACKING.md  README.md  ugly_getopt.h
.github/workflows/: ci.yml  configurations.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  basic_usage.cpp  example_readme.cpp  fluent_usage.cpp  full_usage.cpp
examples/: CMakeLists.txt  basic_usage.cpp  example_readme.cpp  fluent_usage.cpp  full_usage.cpp
include/: ugly_getopt.h
src/: ugly_getopt.cpp  ugly_getopt.h
test/: CMakeLists.txt  tests_fluent.cpp  tests_input_params.cpp  tests_parser_option.cpp
tests/: CMakeLists.txt  tests_fluent.cpp  tests_functions.cpp  tests_input_params.cpp  tests_parser_option.cpp
